# pre

./: .gitignore  README.md  architecture.md  data.xlsx  demo.html  devbox.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
backend/: gas_backend.spec  main.py  model.py  pyproject.toml  run_server.py  trainer.py
backend/data_store/: users.json
backend/data_store/default_calb/: data.csv  gas_model.pkl  metrics.json  pressure_model.pkl
backend/data_store/default_calb/lstm/: feature_scaler.pkl  target_scaler.pkl
backend/data_store/default_calb/prophet/: gas_model.pkl  pressure_model.pkl
electron/: main.cjs  preload.cjs
src/: App.tsx  api.ts  index.css  types.ts
src/components/: CommentPanel.tsx  DashboardPage.tsx  EmptyState.tsx  ImportPage.tsx  PredictPage.tsx  TaskListPage.tsx  TrainingProgress.tsx  TrainingSuccess.tsx  UserSelector.tsx
