[project]
name = "gas-prediction-backend"
version = "0.1.0"
description = "燃气管网 AI 预测系统 — Python 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "prophet>=1.1.4",
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
pack = [
    "pyinstaller>=6.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
